# polyeval-extra

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  shell.nix
tests/: test_example_evaluation.py  test_execution.py  test_self_contain_evaluation.py
tests/data/: example.ped  example.yaml  hello_world.yaml  self_contain.ped
